[gd_scene load_steps=31 format=3 uid="uid://bobtsvomowe28"]

[ext_resource type="Script" path="res://scenes/Objects/Items/Pickup.gd" id="1_6kmgf"]
[ext_resource type="Texture2D" uid="uid://dyecajv0oil0s" path="res://sprites/Objects/Items.png" id="2_20fia"]
[ext_resource type="Shader" path="res://shaders/PaletteSwap.gdshader" id="2_y512r"]
[ext_resource type="AudioStream" uid="uid://cd1pt0mn386bt" path="res://sounds/bolts.wav" id="4_mliej"]
[ext_resource type="AudioStream" uid="uid://cbfqfx4e0lol3" path="res://sounds/item.wav" id="5_4oso0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3l2vc"]
shader = ExtResource("2_y512r")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_rihwn"]
atlas = ExtResource("2_20fia")
region = Rect2(62, 32, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfxgv"]
atlas = ExtResource("2_20fia")
region = Rect2(62, 48, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kher5"]
atlas = ExtResource("2_20fia")
region = Rect2(62, 64, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uqps"]
atlas = ExtResource("2_20fia")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m2t4"]
atlas = ExtResource("2_20fia")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1q65"]
atlas = ExtResource("2_20fia")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kj44c"]
atlas = ExtResource("2_20fia")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwf6r"]
atlas = ExtResource("2_20fia")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qacbm"]
atlas = ExtResource("2_20fia")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l5yj"]
atlas = ExtResource("2_20fia")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3ww6"]
atlas = ExtResource("2_20fia")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_77bm8"]
atlas = ExtResource("2_20fia")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_83mer"]
atlas = ExtResource("2_20fia")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpfem"]
atlas = ExtResource("2_20fia")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmvhu"]
atlas = ExtResource("2_20fia")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4flby"]
atlas = ExtResource("2_20fia")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1wys"]
atlas = ExtResource("2_20fia")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jh32t"]
atlas = ExtResource("2_20fia")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dydby"]
atlas = ExtResource("2_20fia")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ifqv"]
atlas = ExtResource("2_20fia")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ux4tq"]
atlas = ExtResource("2_20fia")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pfpbr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rihwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfxgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kher5")
}],
"loop": true,
"name": &"1Up",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uqps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m2t4")
}],
"loop": true,
"name": &"ETnk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1q65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kj44c")
}],
"loop": true,
"name": &"LgBT",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwf6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qacbm")
}],
"loop": true,
"name": &"LgHP",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l5yj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3ww6")
}],
"loop": true,
"name": &"LgWE",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_77bm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83mer")
}],
"loop": true,
"name": &"STnk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpfem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmvhu")
}],
"loop": true,
"name": &"SmBT",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4flby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1wys")
}],
"loop": true,
"name": &"SmHP",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jh32t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dydby")
}],
"loop": true,
"name": &"SmWE",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ifqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ux4tq")
}],
"loop": true,
"name": &"WTnk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r4kx5"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_urp8p"]
size = Vector2(8, 8)

[node name="Item" type="CharacterBody2D"]
collision_layer = 64
collision_mask = 3
script = ExtResource("1_6kmgf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_3l2vc")
sprite_frames = SubResource("SpriteFrames_pfpbr")
animation = &"ETnk"
autoplay = "SmHP"
frame_progress = 0.0339034

[node name="Touch" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="Hitbox" type="CollisionShape2D" parent="Touch"]
shape = SubResource("RectangleShape2D_r4kx5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_urp8p")

[node name="BoltSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_mliej")

[node name="ItemSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_4oso0")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="Touch" to="." method="_on_touch_body_entered"]
